k8s/apps/terminus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terminus
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: terminus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: terminus
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: terminus
          image: ghcr.io/usetrmnl/terminus:0.47.0
          ports:
            - containerPort: 2345
              name: http
          volumeMounts:
            - mountPath: /app/public/uploads
              name: data
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
        - name: sidekiq
          image: ghcr.io/usetrmnl/terminus:0.47.0
          command: ["bundle", "exec", "sidekiq", "-r", "./config/sidekiq.rb"]
          volumeMounts:
            - mountPath: /app/public/uploads
              name: data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: terminus-uploads
